@@ -1,0 +1,9 @@
+#!/usr/bin/env python
+
+# $Id: make-releases 1582 2004-11-08 01:40:28Z quarl $
+
+import sys
+import release
+
+if __name__ == '__main__':
+    release.make_releases(sys.argv[1:])
