@@ -1,0 +1,12 @@
+#!/usr/bin/env python
+
+# $Id: tag-release 1582 2004-11-08 01:40:28Z quarl $
+
+import sys
+import release
+
+if __name__ == '__main__':
+    release.tag_release(sys.argv[1:])
+
+
+
