@@ -34,9 +34,17 @@
     </p>
 
     <h3>Download</h3>
-    <pre>
-      <a href="http://subversion.tigris.org/">svn</a> co <a href="http://svn.quarl.org/repos/quickypix/trunk/quickypix/">http://svn.quarl.org/repos/quickypix/trunk/quickypix/</a>
-    </pre>
+    <ul>
+      <li><a href="releases/quickypix-1.1.tar.gz">quickypix-1.1.tar.gz</a>
+      </li>
+      <li><a href="releases/">Browse for other versions or other kinds of
+          archives</a></li>
+      <li>Browse/checkout the Subversion repository:
+        <pre>
+   <a href="http://subversion.tigris.org/">svn</a> co <a href="http://svn.quarl.org/repos/quickypix/trunk/quickypix/">http://svn.quarl.org/repos/quickypix/trunk/quickypix/</a>
+        </pre>
+      </li>
+    </ul>
 
     <h3>Screenshot</h3>
     <img alt="[Screenshot of QuickyPix in a browser]" src="quickypix-screenshot.png"/>
@@ -101,7 +109,7 @@
 
     <h3>License</h3>
     <p>
-      QuickyPix is licensed under the <a href="http://www.gnu.org/copyleft/gpl.html">GPL</a>.
+      QuickyPix is licensed under <a href="http://www.gnu.org/copyleft/gpl.html">GPL</a> v2+.
     </p>
 
 
